--- a/src/app/cart/cart/cart.component.html
+++ b/src/app/cart/cart/cart.component.html
@@ -1,1 +1,57 @@
-<p>cart works!</p>
+<div class="row" id="cart">
+  <div class="col-md-8 col-sm-12">
+    <div class="card mb-3 p-3 border-dark border-right-0">
+      <div class="row no-gutters">
+        <div class="col-md-2">
+          <img src="assets/tata_salt.jpeg" class="card-img" alt="...">
+        </div>
+        <div class="col-md-10">
+          <div class="card-body shadow-sm">
+            <div class="row">
+              <div class="col-md-4 m-auto">
+                <h5 class="card-title">Item 1</h5>
+                <p class="card-text">
+                  <span class="font-weight-bold">&#8377;319</span>
+                  <span class="mx-3 text-muted line-through">900</span>
+                  <span class="text-success">64% Off</span>
+                </p>
+              </div>
+              <div class="col-md-4 m-auto">
+                <button class="btn border"><i class="fa fa-minus"></i></button>
+                <button class="btn disabled border mx-3">1</button>
+                <button class="btn border"><i class="fa fa-plus"></i></button>
+              </div>
+              <div class="col-md-4 m-auto">
+                <button class="btn default"> Remove</button>
+              </div>
+            </div>
+
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="col-md-4 col-sm-12">
+    <div class="card">
+      <div class="card-header">
+        Price Details
+      </div>
+      <div class="card-body">
+        <div class="card-text d-flex">
+          <p class="col">Price &#x28;1 Item&#x29;</p>
+          <p class="col d-flex justify-content-between"><span>:</span><span>&#8377;789</span></p>
+        </div>
+        <div class="card-text d-flex">
+          <p class="col">Discount</p>
+          <p class="col d-flex justify-content-between"><span>:</span><span>&#8377;789</span></p>
+        </div>
+      </div>
+      <div class="card-footer d-flex justify-content-between font-weight-bolder">
+        <span>
+          Total Payable
+        </span>
+        <span>&#8377; 479</span>
+      </div>
+    </div>
+  </div>
+</div>
