--- a/src/app/product/product-list/product-list.component.html
+++ b/src/app/product/product-list/product-list.component.html
@@ -22,7 +22,7 @@
         <div class="row mx-0">
           <div class="card mx-1 my-1 border col-5 offset-1 col-md-2 col-lg-2 col-xl-2 offset-md-1 offset-lg-1
             offset-xl-1" *ngFor="let item of list">
-            <!-- <img src="..." class="card-img-top" alt="..."> -->
+            <img src="assets/tata_salt.jpeg" class="card-img-top" alt="...">
             <div class="card-body">
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
                 card's content.{{'item '+ item}}</p>
