--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -17,7 +17,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/shopping-cart">
+          <a class="nav-link" routerLink="/cart">
             <crs-cart-icon></crs-cart-icon>
             <span class="badge badge-warning badge-pill">
               0
