--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-primary" id="header">
   <div class="container">
-    <a class="navbar-brand" href="#">
+    <a class="navbar-brand" [routerLink]="['/']" routerLinkActive="router-link-active">
       <i class="fa fa-star fa-2x gold" aria-hidden="true"></i>
     </a>
     <button class="navbar-toggler navbar-toggler-right" [ngClass]="{'collapsed':toggleNav}" type="button"
@@ -20,7 +20,7 @@
           <a class="nav-link" routerLink="/cart">
             <crs-cart-icon></crs-cart-icon>
             <span class="badge badge-warning badge-pill">
-              0
+              {{(itemCount$|async)}}
             </span>
           </a>
         </li>
