--- a/src/app/product/product-list/product-list.component.html
+++ b/src/app/product/product-list/product-list.component.html
@@ -26,8 +26,8 @@
             <div class="card-body">
 
               <p class="card-text">
-                <span class="font-weight-bold">&#8377;{{item.sellingPrice}}</span>
-                <span class="mx-3 text-muted line-through">{{900}}</span>
+                <span class="font-weight-bold">&#8377;{{item.discountPrice}}</span>
+                <span class="mx-3 text-muted line-through">{{item.sellingPrice}}</span>
                 <span class="text-success">{{item.discount}}% Off</span>
               </p>
               <div>
