--- a/src/app/shared/components/dialog/dialog.component.html
+++ b/src/app/shared/components/dialog/dialog.component.html
@@ -1,10 +1,15 @@
-<div class="crs-dialog">
+<!-- <div class="crs-dialog">
   <div class="crs-dialog-body">
     <ng-content></ng-content>
   </div>
 </div>
-<div class="crs-dialog-background"></div>
-
+<div class="crs-dialog-background"></div> -->
+<div class="mmodal">
+  <div class="mmodal-body">
+    <ng-content></ng-content>
+  </div>
+</div>
+<div class="mmodal-background"></div>
 <!-- <div id="myModal" class="modal">
 
   <div class="modal-content">
