--- a/src/app/shared/components/filter/filter.component.html
+++ b/src/app/shared/components/filter/filter.component.html
@@ -7,6 +7,9 @@
 </div>
 <button (click)="showDialog('modal_2')" *ngIf="(screenSize$ |async)">Filter Options</button>
 <crs-dialog id="modal_2" class="hhidden">
-  Sort Dialog
+  <span class="h5">Filters</span>
+  <crs-range-slider [min]="100" [max]="500" [formControl]="rangeSlider"></crs-range-slider>
+
+  <button class="btn btn-sm btn-primary m-auto">Apply</button>
   <button (click)="close('modal_2')">Close Dialog</button>
 </crs-dialog>
